--- a/day4/day4.html
+++ b/day4/day4.html
@@ -6,10 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="task1.html">task1</a>
-    <a href="task2.html">task2</a>
-    <a href="task3.html">task3</a>
-    <a href="task4.html">task4</a>
-    <a href="task5.html">task5</a>
+    <a href="task1.html">task1</a><br>
+    <a href="task2.html">task2</a><br>
+    <a href="task3.html">task3</a><br>
+    <a href="task4.html">task4</a><br>
+    <a href="task5.html">task5</a><br>
 </body>
 </html>
