--- a/day8/day8.html
+++ b/day8/day8.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Day5</title>
+    <title>Document</title>
 </head>
-<body>
+<<br>
     <a href="task1.html">task1</a><br>
-    <a href="task2.html">task2</a><br>
+    <a href="task1.html">task2</a><br>
     <a href="task3.html">task3</a><br>
     <a href="task4.html">task4</a><br>
     <a href="task5.html">task5</a><br>
     <a href="task6.html">task6</a><br>
-    <a href="task7.html">task7</a><br>
 </body>
 </html>
