--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <a href="day2.html">day2</a><br>
     <a href="day3/day3.html">day3</a><br>
     <a href="day4/day4.html">day4</a><br>
-    <a href="day5/day5.html">day5</a>
+    <a href="day5/day5.html">day5</a><br>
+    <a href="day7.html">day7</a><br>
+    <a href="day8/day8.html">day8</a><br>
+    <a href="day9.html">day9</a><br>
 </body>
 </html>
